fix(tests): replace manual bounds check with `Math.clamp` in `JwtFilterIntegrationTest`